# robogo

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  check_format.sh  goslayer.sh  installWebsocketpp [run this anywhere outside the repo folder].sh  installWebsocketpp.sh  run.sh  tests.rar
cmake.modules/: CodeCoverage.cmake
sgfFiles/: captureAhmed.sgf  pass.sgf  suicide2.sgf  turn.sgf  validGame.sgf  validMove.sgf
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  config.h.in  main.cpp  server.cpp
src/GUI/: finish.html  gulpfile.js  index.html  script.js  start.html
src/GUI/agent/: agent.cpp  agent.h  gui.cpp  gui.h
src/GUI/client/: finish.html  game.html  gulpfile.js  index.html  package.json
src/GUI/client/css/: animated-text.css  bebas.css  start.css
src/GUI/client/js/: finished.js  start.js
src/GUI/client/scripts/: client.js  main.js  main.min.js  script.js  websocketHandler.js
src/GUI/client/scripts/gtp/: entities.js  utils.js
src/GUI/client/scripts/gtp/protocol/: gtp.js  gtpAdminstrativeCommands.js  gtpCorePlayCommands.js  gtpRegressionCommands.js  gtpSetupCommands.js
src/GUI/css/: animated-text.css  start.css
src/GUI/js/: finished.js  script.js  start.js
src/GUI/scripts/: main.min.js  script.js
src/GUI/scripts/gtp/: utils.js
src/GUI/scripts/gtp/protocol/: gtp.js  gtpCorePlayCommands.js  gtpDebugCommands.js  gtpTournamentCommands.js
src/GUI/server/: Server.cpp  Server.h
src/SGF _GNU library/: CMakeCache.txt  GoBase-25-years.sgf  Makefile  SGFinterface.c  SGFinterface.cpp  SGFinterface.h  cmake_install.cmake  final.txt  myBoard.h  out.txt  output  print_prop_names.ipynb  sgf_utils.c  sgf_utils.cpp  sgfnode.c  sgfnode.cpp  sgftree.c  sgftree.cpp  sgftree.h
src/SimpleGUI/: controller.cpp  driver.cpp  simplegui.cpp  simplegui.h
src/agents/: mcts_agent.h
src/controller/: agent.h  game.cpp  game.h  guiGame.h  lab2.py
src/engine/: CMakeLists.txt  board.h  cluster.cpp  cluster.h  engine.cpp  engine.h  game.h  group.cpp  group.h  interface.h  iterators.h  liberties.cpp  liberties.h  score.cpp  score.h  utility.h  zobrist.cpp  zobrist.h
src/gtp/: AdminstrativeCommands.cpp  CorePlayCommands.cpp  DebugCommands.cpp  RegressionCommands.cpp  SetupCommands.cpp  TournamentCommands.cpp  debug_functions.cpp  engine.cpp  entities.h  gtp.cpp  gtp.h  gtp_functions.cpp  interface.cpp  output  parsing.cpp  utility.h
src/mcts/: common.h  lgr.cpp  lgr.h  mcts.cpp  mcts.h  pattern3x3.cpp  pattern3x3.h  playout.cpp  playout.h  prior_knowledge.cpp  prior_knowledge.h
src/net/: action_message.cpp  action_message.h  game_manager.cpp  game_manager.h  game_runner.cpp  game_runner.h  local_agent.h  net_game_manager.cpp  net_game_manager.h  remote_agent.h
src/net_controller/: game_manager.cpp  game_manager.h
src/serverInterface/: serverInterface.cpp  serverInterface.hpp  serverMain.cpp
src/sgf/: sgf.h  sgf_executor.cpp  sgf_parser.cpp  sgf_parser.h
src/src/: Makefile  cmake_install.cmake  config.h  goslayer-executable
tests/: CMakeLists.txt  capture.tst  interface_tests.cpp  ko.sgf  ko.tst  main.cpp  moves.cpp  sample.cpp  test_loader.cpp  test_loader.h
tests/games/: Game_021.sgf  Game_022.sgf  Game_023.sgf
tests/scripts/: basic.tst  capture.tst  ko.tst  liberties.tst  score.tst  suicide.tst  test1  test_001.tst  test_002.tst  test_003.tst
